--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
-  <meta charset="utf-8"
   <title=>HTML template</title>
-  </head>
+  <meta charset="utf-8">
+  <title>HTML template</title>
+  <meta name="viewport" content="width=device-width,initial scale=1">
+</head>
 <body>
+
+  <header>
+    <h1>HTML template</h>
+  </header>
+
+  <main>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+</main>
 
 </body>
 </html>
