Add wikipedia link to index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
-  <title=>HTML template</title>
   <meta charset="utf-8">
   <title>HTML template</title>
   <meta name="viewport" content="width=device-width,initial scale=1">
@@ -13,8 +12,10 @@
   </header>
 
   <main>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-</main>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <img src="images/logo.svg" alt="">
+    <a href="https//www.wikipedia">Wikipedia</a>
+  </main>
 
 </body>
 </html>
