--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
 
   <header>
-    <h1>HTML template</h>
+    <h1>HTML template</h1>
   </header>
 
   <main>
     <p>Lorem ipsum dolor sit amet.</p>
     <img src="images/logo.svg" alt="">
-    <a href="https//www.wikipedia.org">Wikipedia</a>
+    <a href="https://www.wikipedia.org">Wikipedia</a>
   </main>
 
 </body>
